--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -13,7 +13,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  min-height: 700px;
+  min-height: 800px;
 }
 
 #home-section .dark-overlay {
@@ -21,7 +21,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 700px;
+  min-height: 800px;
   background: rgba(0, 0, 0, 0.7);
 }
 
@@ -31,4 +31,8 @@ body {
 
 #home-section .card-form {
   opacity: 0.8;
+}
+
+#home-section .h2 {
+  color: #ffd700;
 }
