--- a/backend/public/css/profile.css
+++ b/backend/public/css/profile.css
@@ -27,8 +27,22 @@ body {
 
 #profile-section .profile-inner-thing {
   padding: 50px;
-  padding-top: 75px;
+  padding-top: 80px;
   width: 80%;
   background: rgba(256, 256, 0, 0.5);
   min-height: 800px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 4gba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+  color: #000000
 }
