--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -80,13 +80,13 @@
             <li class="nav-item">
               <a
                 class="btn btn-outline-light mx-3"
-                href="signin.html"
+                href="signin"
                 role="button"
                 >Sign In</a
               >
             </li>
             <li class="nav-item">
-              <a class="btn btn-outline-light" href="signup.html" role="button"
+              <a class="btn btn-outline-light" href="signup" role="button"
                 >Sign Up</a
               >
             </li>
