--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -122,10 +122,7 @@
                 </button>
               </form>
 
-              <h2
-                class="display-4 text-lg-center font-weight-bold"
-                style="color: #ffd700"
-              >
+              <h2 class="display-4 text-lg-center font-weight-bold" style="color: #ffd700">
                 Delivering food from <strong>ALL</strong> of your favorite
                 resturants,
                 <strong>GUARAN-FUCKING-DICK!</strong>
@@ -137,6 +134,6 @@
     </header>
 
     <!-- FOOTER -->
-    < % include ../partials/footer %>
+    < % include ../partials/footer % >
   </body>
 </html>
