Edits to footer, from the index file

--- a/backend/views/partials/footer.ejs
+++ b/backend/views/partials/footer.ejs
@@ -1,11 +1,40 @@
 <footer id="main-footer" class="bg-dark">
   <div class="container">
-    <div class="row">
-      <div class="col text-center py-2">
-        <h3 style="color: #ffd700">Ready Software Engineering Design</h3>
-          <button class="btn btn-danger" onclick="window.location.href = 'https://sites.google.com/view/rsed/'">
-              Check Out Our Website!
-          </button>
+    <div class="row-sm-2 row-md-8 row-lg-10 row-xl-14">
+      <div class="col-sm-2 col-md-8 col-lg-10 col-xl-14 text-center py-2">            
+        <div class="row" style="padding-top: 10px; padding-bottom: 15px">
+          <div class="col font-weight-bold" style="font-size: 20px">
+            Get to Know Us
+          </div>
+          <div class="col font-weight-bold" style="font-size: 20px">
+            Let Us Help You
+          </div>
+
+          <div class="w-100" style="padding-top: 5px"></div>
+          <div class="col">
+            <a href="https://sites.google.com/view/rsed/" style="color: white;">About Us</a>
+          </div>
+          <div class="col">
+            <a href="#" style="color: white;">Account Details</a>
+          </div>
+        </div>
+        <div class="row" style="padding-bottom: 15px">
+          <a href="index.html">
+            <img src="img\rSedLogo.png" style="width: 30px; height: 30px" />
+          </a>
+          <a href="#" style="color:grey">
+            <span class="mr-3" style="padding-left: 15px; font-size: 12px;">Terms of Service</span>
+          </a>
+          <a href="#" style="color:grey">
+            <span class="mr-3" style="font-size: 12px;">Privacy</span>
+          </a>
+          <a href="#" style="color:grey">
+            <span class="mr-3" style="font-size: 12px;">Delivery Locations</span>
+          </a>
+          <a style="color:grey">
+            <span class="mr-3" style="font-size: 12px;">&#169 2020 rSed</span>
+          </a>
+        </div>
       </div>
     </div>
   </div>
