--- a/project/views/home.ejs
+++ b/project/views/home.ejs
@@ -31,7 +31,7 @@
 
   <!-- Body -->
   <body>
-    < % include ../partials/header % >
+    <% include /partials/header %>
 
     <header id="home-section">
       <div class="dark-overlay">
@@ -61,6 +61,6 @@
     </header>
 
     <!-- FOOTER -->
-    < % include ../partials/footer % >
+    <% include /partials/footer %>
   </body>
 </html>
