changed penis and penis

--- a/project/views/home.ejs
+++ b/project/views/home.ejs
@@ -31,29 +31,34 @@
 
   <!-- Body -->
   <body>
-    < % include ../partials/header % >
+    <%- include("./partials/header.ejs") %>
+    <!--%include partials/header%>-->
 
     <header id="home-section">
       <div class="dark-overlay">
         <div class="home-inner container">
           <div class="row">
             <div class="d-lg-block">
-              <h1 class="display-1 text-lg-center text-danger mb-3 font-weight-bold">
-                OmNom Food Delivery
+              <h1 class="display-4 text-center">
+                Delivering food from <strong>ALL</strong> of your favorite
+                resturants,
+                <strong>GUARANTEED!</strong>
               </h1>
-
-              <form class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5">
-                <input type="text" class="form-control mr-2" placeholder="Search"/>
-                <button class="btn btn-outline-warning" style="margin-top: 25px">
+              <form
+                class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
+              >
+                <input
+                  type="text"
+                  class="form-control mr-2"
+                  placeholder="Search"
+                />
+                <button
+                  class="btn btn-outline-warning"
+                  style="margin-top: 25px"
+                >
                   Search for Noms
                 </button>
               </form>
-
-              <h2 class="display-4 text-lg-center font-weight-bold" style="color: #ffd700">
-                Delivering food from <strong>ALL</strong> of your favorite
-                resturants,
-                <strong>GUARAN-FUCKING-DICK!</strong>
-              </h2>
             </div>
           </div>
         </div>
@@ -61,6 +66,6 @@
     </header>
 
     <!-- FOOTER -->
-    < % include ../partials/footer % >
+    <%- include("./partials/footer.ejs") %>
   </body>
 </html>
