--- a/project/views/signin.ejs
+++ b/project/views/signin.ejs
@@ -27,7 +27,7 @@
 <!-- Body -->
 
 <body>
-  < % include ../partials/header % >
+  <%- include("./partials/header.ejs") %>
 
   <header id="sign-in">
     <div class="d-flex justify-content-center" style="margin-top: 100px">
@@ -77,18 +77,7 @@
   </header>
 
   <!-- FOOTER -->
-  <footer id="main-footer" class="bg-dark">
-    <div class="container">
-      <div class="row">
-        <div class="col text-center py-2">
-          <h3 style="color: #ffd700">Ready Software Engineering Design</h3>
-          <button class="btn btn-danger" onclick="window.location.href = 'https://sites.google.com/view/rsed/'">
-            Check Out Our Website!
-          </button>
-        </div>
-      </div>
-    </div>
-  </footer>
+  <%- include("./partials/footer.ejs") %>
 </body>
 
 </html>
