--- a/project/views/signin.ejs
+++ b/project/views/signin.ejs
@@ -35,13 +35,13 @@
           <h4 style="color: #ffd700">
             New to OmNom Foods? <a href="signup" class="text-white"><u>Sign Up</u></a>
           </h4>
-          <form>
+          <form action = '/signin' method="POST">
             <div class="form-group">
-              <input type="email" class="form-control form-control-lg" placeholder="Email" />
+              <input type="email" name ="email" class="form-control form-control-lg" placeholder="Email" />
             </div>
 
             <div class="form-group">
-              <input type="password" class="form-control form-control-lg" placeholder="Password" />
+              <input type="password" name="password" class="form-control form-control-lg" placeholder="Password" />
             </div>
 
         </div>
