--- a/project/views/signup.ejs
+++ b/project/views/signup.ejs
@@ -34,7 +34,7 @@
                     <h3 style="color: #ffd700">Sign Up</h3>
                     <h4 style="color: #ffd700">
                         Already Have an Account?
-                        <a href="signin" class="text-white"><u>Sign In</u></a>
+                        <a href="/signin" class="text-white"><u>Sign In</u></a>
                     </h4>
                     <form method="POST" action="/"
                         oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
