--- a/project/views/signup.ejs
+++ b/project/views/signup.ejs
@@ -36,7 +36,7 @@
                         Already Have an Account?
                         <a href="/signin" class="text-white"><u>Sign In</u></a>
                     </h4>
-                    <form method="POST" action="/"
+                    <form method="POST" action="/signup"
                         oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
                         <div class="form-group">
                             <input type="text" name="firstName" class="form-control form-control-lg"
