--- a/project/views/signin.ejs
+++ b/project/views/signin.ejs
@@ -37,9 +37,8 @@
           </h4>
           <form action = '/signin' method="POST">
             <div class="form-group">
-              <input type="email" name ="email" class="form-control form-control-lg" placeholder="Email" />
+              <input type="text" name ="username" class="form-control form-control-lg" placeholder="Username" />
             </div>
-
             <div class="form-group">
               <input type="password" name="password" class="form-control form-control-lg" placeholder="Password" />
             </div>
