--- a/project/views/signup.ejs
+++ b/project/views/signup.ejs
@@ -47,6 +47,10 @@
                                 placeholder="Last Name" required />
                         </div>
                         <div class="form-group">
+                            <input type="text" name="username" class="form-control form-control-lg"
+                                placeholder="Username" required />
+                        </div>
+                        <div class="form-group">
                             <input type="email" name="email" class="form-control form-control-lg" placeholder="Email"
                                 required />
                         </div>
