--- a/project/views/signup.ejs
+++ b/project/views/signup.ejs
@@ -40,19 +40,18 @@
                         oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
                         <div class="form-group">
                             <input type="text" name="firstName" class="form-control form-control-lg"
-                                placeholder="First Name" required />
+                                placeholder="First Name"/>
                         </div>
                         <div class="form-group">
                             <input type="text" name="lastName" class="form-control form-control-lg"
-                                placeholder="Last Name" required />
+                                placeholder="Last Name"/>
                         </div>
                         <div class="form-group">
                             <input type="text" name="username" class="form-control form-control-lg"
-                                placeholder="Username" required />
+                                placeholder="Username"/>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-control form-control-lg" placeholder="Email"
-                                required />
+                            <input type="email" name="email" class="form-control form-control-lg" placeholder="Email"/>
                         </div>
                         <div class="form-group">
                             <input type="text" name="phone" class="form-control form-control-lg"
@@ -60,11 +59,11 @@
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" class="form-control form-control-lg"
-                                placeholder="Password" required />
+                                placeholder="Password"/>
                         </div>
                         <div class="form-group">
                             <input type="password" name="password2" class="form-control form-control-lg"
-                                placeholder="Confirm Password" required />
+                                placeholder="Confirm Password"/>
                         </div>
                         <input type="submit" value="Submit" class="btn btn-outline-light btn-block bg-dark" />
                     </form>
