--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -3,10 +3,7 @@
   bg-danger: red background
   fixed-top: bar fixed to top --- remove??
 -->
-<nav
-      class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top"
-      id="main-nav"
-    >
+<nav class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top" id="main-nav" >
       <!-- 
         create a container class: follows a grid system of 12 columns across the page
       -->
