--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -35,9 +35,9 @@
 <body>
   <%- include("./partials/header.ejs") %>
 
-  <header id="profile-section">
+  <header id="profile-section" >
     <div class="shamelessly-copied-dark-overlay">
-      <div class="profile-inner-thing container">
+      <div class="profile-inner-thing container" style="padding-top: 100px">
         <div class="row">
           <div class="d-lg-block">
             <h1 class="font-weight-bold" style="color: #ffffff"> Sebastions</h1>
