--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -68,6 +68,11 @@
               >
             </li>
             <li class="nav-item">
+              <a class="btn btn-outline-light mx-2" href="logout" role="button"
+                >Logout</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="btn btn-outline-light mx-2" href="profile" role="button"
                 >Profile</a
               >
