--- a/project/views/secret.ejs
+++ b/project/views/secret.ejs
@@ -1,3 +1,6 @@
 <h1>This is the secret page</h1>
 
+<li><a href = "/">Homepage</a></li>
+
 <img src = 'https://sadanduseless.b-cdn.net/wp-content/uploads/2019/05/funny-corgi-butts4.jpg' >
+
