--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -3,78 +3,64 @@
   bg-danger: red background
   fixed-top: bar fixed to top --- remove??
 -->
-<nav class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top" id="main-nav" >
-      <!-- 
+<nav class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top" id="main-nav">
+  <!-- 
         create a container class: follows a grid system of 12 columns across the page
       -->
-      <div class="container col align-self-start">
-        <!-- 
+  <div class="container col align-self-start">
+    <!-- 
           a: defines a hyperlink
           href: hypertext reference          
           navbar-brand: brand of company
           clicking rSedFoodDelivery sends back to index.html        
         -->
-        <a href="/" style="text-decoration: none">
-          <div
-            class="col font-weight-bold"
-            href="signin"
-            style="text-align: left; color: white"
-          >
-            <img src="public\img\rSedLogo.png" style="width: 45px; height: 45px" />
-            OmNom Food Delivery
-          </div></a
-        >
-        <!-- 
+    <a href="/" style="text-decoration: none">
+      <div class="col font-weight-bold" href="signin" style="text-align: left; color: white">
+        <img src="public\img\rSedLogo.png" style="width: 45px; height: 45px" />
+        OmNom Food Delivery
+      </div>
+    </a>
+    <!-- 
           makes a button appear to expand the navbar if screen is too small
         -->
-        <button
-          class="navbar-toggler"
-          data-toggle="collapse"
-          data-target="#navbarCollapse"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <!-- 
+    <!-- 
           collapse navbar-collapse: replaces the navigation on small screens with a button
         -->
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <!-- 
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <!-- 
             navbar-nav: full-height and lightweight navigation
             ml-auto: pushes the navbars to the right
           -->
 
-          <ul class="navbar-nav ml-auto">
-            <!--
+      <ul class="navbar-nav ml-auto">
+        <!--
             <li class="nav-item bg-dark">
               <a class="btn btn-outline-light" href="/getall" role="button"
                 >Data Dump</a
               >
             </li>-->
-            <li class="nav-item">
-              <a
-                class="btn btn-outline-light mx-2"
-                href="signin"
-                role="button"
-                >Sign In</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-outline-light mx-2" href="signup" role="button"
-                >Sign Up</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-outline-light mx-2" href="logout" role="button"
-                >Logout</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-outline-light mx-2" href="profile" role="button"
-                >Profile</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
+        <% if(!currentUser){ %>
+        <li class="nav-item">
+          <a class="btn btn-outline-light mx-2" href="/signin" role="button">Sign In</a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-outline-light mx-2" href="/signup" role="button">Sign Up</a>
+        </li>
+        <% }else{ %>
+          <li><a>Signed in as <%= currentUser.firstName %></a></li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light mx-2" href="/profile/<%=currentUser._id%> " role="button">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-light mx-2" href="/logout" role="button">Logout</a>
+          </li>
+        <% } %>
+        
+      </ul>
+    </div>
+  </div>
 </nav>
