--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -26,7 +26,7 @@
     <title>OmNom Food Delivery</title>
 
     <!-- rSed Title Icon -->
-    <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
+    <link rel="icon" href="public/img/rSedLogo.png" type="image/icon type" />
   </head>
 
   <!-- Body -->
