--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -19,7 +19,7 @@
   <title>OmNom Food Delivery</title>
 
   <!-- rSed Title Icon -->
-  <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
+  <link rel="icon" href="public/img/rSedLogo.png" type="image/icon type" />
 </head>
 
 <!-- Body -->
@@ -33,17 +33,18 @@
         <div class="row">
           <div class="d-lg-block">
             <h1> <%=user.firstName%> <%=user.lastName%></h1>
-            <h3 class="font-weight-italics" style="color: #ffffff">General Location, and not actual location so they
+            
+            <h3 class="font-weight-italics" style="color: black">General Location, and not actual location so they
               don't get doxed probably</h3>
-            <h2 class="font-weight-bold" style="color: #ffffff"><br><br>About</h2>
-            <h4 style="color: #ffffff">idk, what, something about who they are go here or something? like a profile
+            <h2 class="font-weight-bold" style="color: black"><br><br>About</h2>
+            <h4 style="color: black">idk, what, something about who they are go here or something? like a profile
               description? tbh, for some reason i was using LINKEDIN of all things as a reference, which doesn't even
               make sense because there would be like a profile picture and a banner and we don't have support for that,
               and now that i'm looking at it, it looks like a freaking biography page from an RPG, actually this isn't
               even on our thing so you can just disregard it as something there to pad out this page so it isn't as
               awkward</h4>
-            <h2 class="font-weight-bold" style="color: #ffffff"><br><br>Preferences</h2>
-            <h3 style="color: #ffffff">
+            <h2 class="font-weight-bold" style="color: black"><br><br>Preferences</h2>
+            <h3 style="color: black">
               <ul>
                 <li>Lorem ipsum dolor sit amet.</li>
                 <li>Lorem ipsum dolor sit amet.</li>
