--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -13,13 +13,13 @@
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 
   <!-- CSS StyleSheet -->
-  <link rel="stylesheet" href="public/css/style.css" />
+  <link rel="stylesheet" href="../public/css/style.css" />
 
   <!-- Icon Title -->
   <title>OmNom Food Delivery</title>
 
   <!-- rSed Title Icon -->
-  <link rel="icon" href="public/img/rSedLogo.png" type="image/icon type" />
+  <link rel="icon" href="../public/img/rSedLogo.png" type="image/icon type" />
 </head>
 
 <!-- Body -->
