moved stuff from profile.css to style.css except for the card stuff

--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -36,3 +36,28 @@ body {
 #home-section .h2 {
   color: #ffd700;
 }
+
+#profile-section {
+  background: url(../img/FoodBackground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 1000px;
+}
+
+#profile-section .shamelessly-copied-dark-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 1000px;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+#profile-section .profile-inner-thing {
+  padding: 50px;
+  padding-top: 80px;
+  width: 80%;
+  background: rgba(256, 256, 0, 0.5);
+  min-height: 1000px;
+}
