--- a/project/views/partials/header.ejs
+++ b/project/views/partials/header.ejs
@@ -16,7 +16,7 @@
         -->
     <a href="/" style="text-decoration: none">
       <div class="col font-weight-bold" href="signin" style="text-align: left; color: white">
-        <img src="public\img\rSedLogo.png" style="width: 45px; height: 45px" />
+        <img src="../public/img/rSedLogo.png" style="width: 45px; height: 45px" />
         OmNom Food Delivery
       </div>
     </a>
