--- a/project/views/signin.ejs
+++ b/project/views/signin.ejs
@@ -19,7 +19,7 @@
   <title>rSed Food Delivery</title>
 
   <!-- rSed Title Icon -->
-  <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
+  <link rel="icon" href="./public/img/rSedLogo.png" type="image/icon type" />
 </head>
 
 <!-- Body -->
