--- a/project/views/signup.ejs
+++ b/project/views/signup.ejs
@@ -40,18 +40,18 @@
                         oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
                         <div class="form-group">
                             <input type="text" name="firstName" class="form-control form-control-lg"
-                                placeholder="First Name"/>
+                                placeholder="First Name" required/>
                         </div>
                         <div class="form-group">
                             <input type="text" name="lastName" class="form-control form-control-lg"
-                                placeholder="Last Name"/>
+                                placeholder="Last Name" required/>
                         </div>
                         <div class="form-group">
                             <input type="text" name="username" class="form-control form-control-lg"
-                                placeholder="Username"/>
+                                placeholder="Username" required/>
                         </div>
                         <div class="form-group">
-                            <input type="email" name="email" class="form-control form-control-lg" placeholder="Email"/>
+                            <input type="email" name="email" class="form-control form-control-lg" placeholder="Email" required/>
                         </div>
                         <div class="form-group">
                             <input type="text" name="phone" class="form-control form-control-lg"
@@ -59,7 +59,7 @@
                         </div>
                         <div class="form-group">
                             <input type="password" name="password" class="form-control form-control-lg"
-                                placeholder="Password"/>
+                                placeholder="Password" required/>
                         </div>
                         <div class="form-group">
                             <input type="password" name="password2" class="form-control form-control-lg"
