added restaurant header

--- a/Project/views/restaurants.ejs
+++ b/Project/views/restaurants.ejs
@@ -25,5 +25,9 @@
 <body>
   <%- include("./partials/header.ejs") %>
 
+  <header id="restaurants-section">
+    
+  </header>
+
   <%- include("./partials/footer.ejs") %>
 </body>
