--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -34,17 +34,15 @@
             <h1> <%=user.firstName%> <%=user.lastName%></h1>
             <h3 class="font-weight-italics" style="color: black"> <%= user.email %></h3>
             <h2 class="font-weight-bold" style="color: black"><br><br>About</h2>
-
             <h2 class="font-weight-bold" style="color: black"><br><br>Preferences</h2>
             <h3 style="color: black">
               <ul>
-                <% preferences.forEach(function(food))%>
-                <div>
-                  <h4><%= preferences.name %></h4> 
-                  <img src="<%= preferences.image %>">
+                <% preferences.forEach(function(restaurant){ %>
+                <div class="column">
+                    <h4><%= restaurant.name %></h4>
+                    <div class="row"><img src="<%= restaurant.image %>" height="150" width="200"></div>
                 </div>
-                </li>
-                <% } %>
+                <% }); %>
                 <li>Lorem ipsum dolor sit amet.</li>
                 <li>Lorem ipsum dolor sit amet.</li>
               </ul>
