edit profile page works now, submiting changes does not

--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -49,8 +49,7 @@
                     <div class="row"><img src="<%= restaurant.image %>" height="150" width="200"></div>
                 </div>
                 <% }); %>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit amet.</li>
+                <li><%=user.description%></li>
               </ul>
             </h3>
           </div>
