--- a/Project/views/editprofile.ejs
+++ b/Project/views/editprofile.ejs
@@ -21,12 +21,13 @@
     <link rel="icon" href="public\img\rSedLogo.png" type="image/icon type" />
 </head>
 
+<!-- Body -->
 <body>
-    <header id=edit_user>
-        <form method="EDIT" action="/editprofile">
+    <header id=edit_profile>
+        <form method="PATCH" action="/profile/<%=currentUser._id%>">
         <div class="form-group">
             <input type="text" name="firstName" class="form-control form-control-lg"
-                placeholder="First Name" required/>
+                placeholder="<%=user.firstName%>" required/>
         </div>
         <div class="form-group">
             <input type="text" name="lastName" class="form-control form-control-lg"
@@ -41,12 +42,16 @@
                 placeholder="Phone Number" />
         </div>
         <div class="form-group">
-            <input type="password" name="password" class="form-control form-control-lg"
-                placeholder="Password" required/>
-        </div>
-        <div class="form-group">
             <input type="text" name="description" class="form-control form-control-lg"
                 placeholder="description"/>
+        </div>
+        <div class="form-group">
+            <input type="text" name="preferences" class="form-control form-control-lg"
+                placeholder="preferences"/>
+        </div>
+        <div class="form-group">
+            <input type="text" name="ObjectId" class="form-control form-control-lg"
+                placeholder="<%=currentUser._id%>"/>
         </div>
         <input type="submit" value="Submit" class="btn btn-outline-light btn-block bg-dark" />
         </form>
