--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -42,7 +42,9 @@
               <h1 class="display-4 text-center">
                 Delivering food from <strong>ALL</strong> of your favorite
                 resturants,
-                <strong>GUARANTEED!</strong>
+                <strong>
+                  GUARANTEED!
+                </strong>
               </h1>
               <form
                 class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
