--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -45,7 +45,9 @@
             <h2 class="font-weight-bold" style="color: black">
               About
             </h2>
-            <p><%=user.description%></p>
+              <h2>
+                <%=user.description%>
+              </h2>
             <br><br>
             <h2 class="font-weight-bold" style="color: black">
               Preferences
@@ -54,12 +56,12 @@
               <ul>
                 <% preferences.forEach(function(restaurant){ %>
                   <div class="column">
-                      <h4>
-                        <%= restaurant.name %>
-                      </h4>
-                      <div class="row">
-                        <img src="<%= restaurant.image %>" height="150" width="200">
-                      </div>
+                    <h4>
+                      <%= restaurant.name %>
+                    </h4>
+                    <div class="row">
+                      <img src="<%= restaurant.image %>" height="150" width="200">
+                    </div>
                   </div>
                 <% }); %>   
               </ul>
