--- a/project/views/profile.ejs
+++ b/project/views/profile.ejs
@@ -35,6 +35,8 @@
             <a class="btn btn-outline-light mx-2" href="/editprofile/<%=currentUser._id%> " role="button" style="float: right">
               Edit
             </a>
+
+            <img src=<%=user.image%> width="100" height="100">
             <h1>
               <%=user.firstName%> <%=user.lastName%>
             </h1>
