--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -1,78 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- Fancy Fonts, Icons, and Logos -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-      crossorigin="anonymous"
-    />
-    <!-- Bootstrap Link -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-      crossorigin="anonymous"
-    />
 
-    <!-- CSS StyleSheet -->
-    <link rel="stylesheet" href="../public/css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!-- Fancy Fonts, Icons, and Logos -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+  <!-- Bootstrap Link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 
-    <!-- Icon Title -->
-    <title>OmNom Food Delivery</title>
+  <!-- CSS StyleSheet -->
+  <link rel="stylesheet" href="../public/css/style.css" />
 
-    <!-- rSed Title Icon -->
-    <link rel="icon" href="../public/img/rSedLogo.png" type="image/icon type" />
-  </head>
+  <!-- Icon Title -->
+  <title>OmNom Food Delivery</title>
 
-  <!-- Body -->
-  <body>
-    <%- include("./partials/header.ejs") %>
-    <!--%include partials/header%>-->
+  <!-- rSed Title Icon -->
+  <link rel="icon" href="../public/img/rSedLogo.png" type="image/icon type" />
+</head>
 
-    <header id="home-section">
-      <div class="dark-overlay">
-        <div class="home-inner container">
-          <div class="row">
-            <div class="d-lg-block">
-              <h1 class="display-4 text-center">
-                Delivering food from <strong>ALL</strong> of your favorite
-                resturants,
-                <strong>
-                  GUARANTEED!
-                </strong>
-              </h1>
-              <form
-                class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5"
-              >
-                <input
-                  type="text"
-                  class="form-control mr-2"
-                  placeholder="Search"
-                />
-                <button
-                  class="btn btn-outline-warning"
-                  style="margin-top: 25px"
-                >
-                  Search for Noms
-                </button>
-              </form>
-            </div>
+<!-- Body -->
+
+<body>
+  <%- include("./partials/header.ejs") %>
+  <!--%include partials/header%>-->
+
+  <header id="home-section">
+    <div class="dark-overlay">
+      <div class="home-inner container">
+        <div class="row">
+          <div class="d-lg-block">
+            <h1 class="display-4 text-center">
+              Delivering food from <strong>ALL</strong> of your favorite
+              resturants,
+              <strong>
+                GUARANTEED!
+              </strong>
+            </h1>
+            <form class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center mt-5 mb-5">
+              <input type="text" class="form-control mr-2" placeholder="Search" />
+              <button class="btn btn-outline-warning" style="margin-top: 25px">
+                Search for Noms
+              </button>
+            </form>
           </div>
         </div>
       </div>
-    </header>
-    <section id="explore-section" class="bg-light text-muted py-5">
+    </div>
+  </header>
+  <section id="explore-section" class="bg-light text-muted py-5">
 
+  </section>
+  <!-- FOOTER -->
+  <%- include("./partials/footer.ejs") %>
 
-      
-    </section>
-    <!-- FOOTER -->
-    <%- include("./partials/footer.ejs") %>
+</body>
 
-  </body>
 </html>
