--- a/project/views/editProfile.ejs
+++ b/project/views/editProfile.ejs
@@ -49,7 +49,7 @@
                                     placeholder="Phone Number" />
                             </div>
                             <div class="form-group">
-                                <input type="text" name="email" class="form-control form-control-lg"
+                                <input type="email" name="email" class="form-control form-control-lg"
                                     placeholder="Email" />
                             </div>
                             <div class="form-group">
